@@ -1,6 +1,7 @@
 0.05  Fri 31 Jan 19:35:34 IST 2014
     - Minimum version of perl (CPANTS).
     - Add a LICENSE file (CPANTS).
+    - Add t/style-trailing-space.t and remove trailing whitespace.
 
 0.04  Mon  3 Jun 17:38:17 IDT 2013
     - Add an explicit version to Term::Shell::OnScopeLeave.
